created centered style and applied to text and certain graphs

--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
             <a href="our-team/index.html", class="button-link-inactive">Our Team</a>
         </div>
       
-        <h1><strong>How the War in Ukraine is Portrayed <br> in the American Media</strong></h1>
+        <h1 class="centered"><strong>How the War in Ukraine is Portrayed <br> in the American Media</strong></h1>
 
         <!-- introduction to research -->
-        <div class="intro">
+        <div class="centered">
             <p>On February 24, 2022, Russia launched a full-scale invasion of Ukraine. In response, many NATO member nations, including the United States, have sent financial, humanitarian, and military aid to Ukraine to support their efforts. As the war has played out, providing this aid has become a political football in the United States with the latest relief legislation failing in Congress in December 2023 after being panned by Republican Members of Congress. As support for providing aid to Ukraine begins to show cracks along ideological lines, we aim to investigate how the war in Ukraine is portrayed by media outlets across the political spectrum and how these may contribute to this development.</p>
         </div>
 
         <!-- national tv section -->
         <div class="national-tv">
-            <h2>American Network Television Media</h2>
+            <h2 class="centered">American Network Television Media</h2>
 
-            <p>The table below demonstrates how often each of the three main network news agencies used a specific word (left column) within three minutes of using the word "Ukraine" compared to the average of all three agencies. A high value indicates a network used the selected word more in comparison to the other networks, while a lower value indcates a network used the selected word less in comparison to the other networks. Each value represents how many standard deviations each networks value is from the average of all three networks. All data is cumulative by year.</p>
+            <p class="centered">The table below demonstrates how often each of the three main network news agencies used a specific word (left column) within three minutes of using the word "Ukraine" compared to the average of all three agencies. A high value indicates a network used the selected word more in comparison to the other networks, while a lower value indcates a network used the selected word less in comparison to the other networks. Each value represents how many standard deviations each networks value is from the average of all three networks. All data is cumulative by year.</p>
 
             <!-- word chart change by year -->
 
-            <p>Select Year:
+            <p class="centered"><strong>Select Year:</strong>
                 <select onchange="switchVis(this.value)">
                     <option value="Da5oL">2021</option>
                     <option value="4ma8G">2022</option>
@@ -39,8 +39,8 @@
                 </select>
             </p>
 
-            <div class = "iframe-main">
-                <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE" aria-label="Table" id="datawrapper-chart-Qjx9t" src="https://datawrapper.dwcdn.net/Da5oL" scrolling="no" frameborder="0" style="width: 0; min-width: 50% !important; border: none;" height="850"></iframe>
+            <div class = "centered">
+                <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE" aria-label="Table" id="datawrapper-chart-Qjx9t" src="https://datawrapper.dwcdn.net/Da5oL" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="850"></iframe>
             </div> 
 
             <!-- word charts -->
@@ -58,7 +58,7 @@
                 <iframe title="RELATIVE WORD USE IN UKRAINE COVERAGE (2023)" aria-label="Table" id="datawrapper-chart-Qjx9t" src="https://datawrapper.dwcdn.net/Qjx9t/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 33% !important; border: none;" height="850" data-external="1">></iframe>
             </div>
 
-            <p>We also examined the volume of coverage the main three cable news networks dedicate to stories regarding Ukraine over the course of the war and compare it to the volume of stories about Ukraine mentioning either "corrupt", "Biden", or "Burisma". Surprisingly, all three outlets produce similar trends throughout their coverage.</p>
+            <p class="centered">We also examined the volume of coverage the main three cable news networks dedicate to stories regarding Ukraine over the course of the war and compare it to the volume of stories about Ukraine mentioning either "corrupt", "Biden", or "Burisma". Surprisingly, all three outlets produce similar trends throughout their coverage.</p>
 
             <!-- longitudinal charts -->
             <!-- <p>Alina to add a little note explaining the results below here</p> -->
@@ -88,9 +88,9 @@
 
         <!-- national press section -->
         <div class="national-press">
-            <h2>American National Press</h2>
+            <h2 class="centered">American National Press</h2>
 
-            <p>American national press coverage contains orders of magnitude more sources than television network news. The graphs below pull stories published by sources frequently tweeted by either Democrats or Republicans. The first graph depicts the share of these sources' coverage dedicated to covering Ukraine measured against each other. The second graph depicts the share of these sources' coverage didicated to covering Ukraine including mentions of "corrupt" or "corruption" measured against each other. Noteably, each group's share of coverage dedicated to covering Ukraine appears to be spread evenly between the two sources, while sources most frequently tweeted by Republican voters include more mentions of "corrupt" or "corruption".</p>
+            <p class="centered">American national press coverage contains orders of magnitude more sources than television network news. The graphs below pull stories published by sources frequently tweeted by either Democrats or Republicans. The first graph depicts the share of these sources' coverage dedicated to covering Ukraine measured against each other. The second graph depicts the share of these sources' coverage didicated to covering Ukraine including mentions of "corrupt" or "corruption" measured against each other. Noteably, each group's share of coverage dedicated to covering Ukraine appears to be spread evenly between the two sources, while sources most frequently tweeted by Republican voters include more mentions of "corrupt" or "corruption".</p>
 
             <div class="iframe-double-container">
                 <iframe title="PERCENT OF COVERAGE DEDICATED TO UKRAINE BY MEDIA SOURCE" aria-label="Interactive area chart" id="datawrapper-chart-Lri3F" src="https://datawrapper.dwcdn.net/Lri3F/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="363" data-external="1"></iframe>
@@ -104,7 +104,7 @@
         </div>
 
         <!--state and local press -->
-        <div class="local-press">
+        <div class="centered">
             <h2>State and Local Press</h2>
             <p>While the war in Ukraine is not covered as heavily in local media, we also wanted to discover whether there were trends in how the war is portrayed across different geographic regions within the United States. Below is a chart depicting the level of coverage by media outlets in the top 10 most populated states.</p>
 
