--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <p>On February 24, 2022, Russia launched a full-scale invasion of Ukraine. In response, many NATO member nations, including the United States, have sent financial, humanitarian, and military aid to Ukraine to support their efforts. As the war has played out, providing this aid has become a political football in the United States with the latest relief legislation failing in Congress in December 2023 after being panned by Republican Members of Congress. As support for providing aid to Ukraine begins to show cracks along ideological lines, we aim to investigate how the war in Ukraine is portrayed by media outlets across the political spectrum and how these may contribute to this development.</p>
         </div>
 
+        <hr>
+
         <!-- national tv section -->
         <div class="national-tv">
             <h2 class="centered">American Network Television Media</h2>
@@ -86,6 +88,8 @@
             </div>
         </div>
 
+        <hr>
+
         <!-- national press section -->
         <div class="national-press">
             <h2 class="centered">American National Press</h2>
@@ -103,12 +107,18 @@
             </div>
         </div>
 
+        <hr>
+
         <!--state and local press -->
         <div class="centered">
             <h2>State and Local Press</h2>
             <p>While the war in Ukraine is not covered as heavily in local media, we also wanted to discover whether there were trends in how the war is portrayed across different geographic regions within the United States. Below is a chart depicting the level of coverage by media outlets in the top 10 most populated states.</p>
 
             <iframe title="Mentions of Ukraine across Top 10 Populated States" aria-label="Datawrapper visualization" src="https://datawrapper.dwcdn.net/NQAu8/" scrolling="no" frameborder="0" height="400" style="width: 0; min-width: 100%; border: none; height: 500px;"></iframe>
+        </div>
+
+        <div class="centered">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfRWK-xJhCgE0AuhEanhjCo-SY2LvBo8aUzPg1v4YfPKf88Rw/viewform?embedded=true" width="640" height="622" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
     </body>
 </html>
