--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
             <iframe title="Mentions of Ukraine across Top 10 Populated States" aria-label="Datawrapper visualization" src="https://datawrapper.dwcdn.net/NQAu8/" scrolling="no" frameborder="0" height="400" style="width: 0; min-width: 100%; border: none; height: 500px;"></iframe>
         </div>
 
-        <div class="centered">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfRWK-xJhCgE0AuhEanhjCo-SY2LvBo8aUzPg1v4YfPKf88Rw/viewform?embedded=true" width="640" height="622" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <div class="centered-clipped">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfRWK-xJhCgE0AuhEanhjCo-SY2LvBo8aUzPg1v4YfPKf88Rw/viewform?embedded=true" scrolling="no" style="width: 0; min-width: 100%; border: none; height: 560px;" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
     </body>
 </html>
