updated Alina's bio

--- a/our-team/index.html
+++ b/our-team/index.html
@@ -21,7 +21,7 @@
         <p>Sly Yushchyshyn is a Master in Public Policy student at HKS, studying political and economic development. Sly previously worked as a data analyst in the private and public sector.</p>
 
 <!-- Alina Bio -->
-        <h2>Alina</h2>      
+        <h2>Alina Beskrovna</h2>      
         <p>Alina is a first-year Master in Public Administration in International Development (MPA/ID) student at HKS. She also holds an M.Sc. in Applied Mathematics and an MBA in Finance. Alina has previously worked in financial analytics for supply chains and ran a startup development center under USAID.</p>
     </body>
 </html>
