added image of Sly

--- a/our-team/index.html
+++ b/our-team/index.html
@@ -10,13 +10,25 @@
     <body>
         <a href="../index.html", class="button-link-inactive">Home</a>
         <a href="index.html", class="button-link-active">Our Team</a>
-        <h1>About Us</h1>    
+        <h1>About Us</h1>
+
+        <style>
+        /* Add a class to the image and apply border-radius */
+        .rounded-image {
+            border-radius: 50%; /* Set to 50% for a circular shape */
+            width: 200px; /* Set the desired width */
+            height: 200px; /* Set the desired height */
+            object-fit: cover; /* Maintain aspect ratio and cover the container */
+        }
+    </style>    
 
 <!-- Luke Bio -->    
         <h2>Luke Schields</h2>
         <p>Luke Schields is an Master in Public Policy student at the Harvard Kennedy School (HKS) where he is focusing on macroeconomic, energy, and trade policy. Prior to attending HKS, Luke worked for 3 years in the United States Senate where he worked on tax, finance, and energy policy.</p>
 
 <!-- Sly Bio -->
+        <img src="smaller.jpeg" alt="Headshot of Sly" class="rounded-image">
+
         <h2>Sly Yushchyshyn</h2>
         <p>Sly Yushchyshyn is a Master in Public Policy student at HKS, studying political and economic development. Sly previously worked as a data analyst in the private and public sector.</p>
 
