--- a/our-team/index.html
+++ b/our-team/index.html
@@ -22,7 +22,8 @@
         }
     </style>    
 
-<!-- Luke Bio -->    
+<!-- Luke Bio -->
+    <img src="luke-image.png" alt="Headshot of Luke" class="rounded-image">
         <h2>Luke Schields</h2>
         <p>Luke Schields is an Master in Public Policy student at the Harvard Kennedy School (HKS) where he is focusing on macroeconomic, energy, and trade policy. Prior to attending HKS, Luke worked for 3 years in the United States Senate where he worked on tax, finance, and energy policy.</p>
 
