added image of Alina to bio

--- a/our-team/index.html
+++ b/our-team/index.html
@@ -24,6 +24,7 @@
 
 <!-- Luke Bio -->
     <img src="luke-image.png" alt="Headshot of Luke" class="rounded-image">
+
         <h2>Luke Schields</h2>
         <p>Luke Schields is an Master in Public Policy student at the Harvard Kennedy School (HKS) where he is focusing on macroeconomic, energy, and trade policy. Prior to attending HKS, Luke worked for 3 years in the United States Senate where he worked on tax, finance, and energy policy.</p>
 
@@ -34,6 +35,8 @@
         <p>Sly Yushchyshyn is a Master in Public Policy student at HKS, studying political and economic development. Sly previously worked as a data analyst in the private and public sector.</p>
 
 <!-- Alina Bio -->
+        <img src="image-alina.png" alt="Headshot of Alina" class="rounded-image">
+
         <h2>Alina Beskrovna</h2>      
         <p>Alina Beskrovna is a first-year Master in Public Administration in International Development (MPA/ID) student at HKS. She also holds an M.Sc. in Applied Mathematics and an MBA in Finance. Alina has previously worked in financial analytics for supply chains and ran a startup development center under USAID.</p>
     </body>
