made the bios be side-by-side

--- a/our-team/index.html
+++ b/our-team/index.html
@@ -22,22 +22,43 @@
         }
     </style>    
 
-<!-- Luke Bio -->
-    <img src="luke-image.png" alt="Headshot of Luke" class="rounded-image">
+<!-- Container for the images and bios -->
+<div class="container">
 
-        <h2>Luke Schields</h2>
-        <p>Luke Schields is an Master in Public Policy student at the Harvard Kennedy School (HKS) where he is focusing on macroeconomic, energy, and trade policy. Prior to attending HKS, Luke worked for 3 years in the United States Senate where he worked on tax, finance, and energy policy.</p>
+<!-- Luke Bio, left column-->
+    <div class="column">
+        <div class="card">
+            <img src="luke-image.png" alt="Headshot of Luke" class="rounded-image">
+            <div class="text-container">
+                <h2>Luke Schields</h2>
+                <p>Luke Schields is an Master in Public Policy student at the Harvard Kennedy School (HKS) where he is focusing on macroeconomic, energy, and trade policy. Prior to attending HKS, Luke worked for 3 years in the United States Senate where he worked on tax, finance, and energy policy.</p>
+            </div>
+        </div>
+    </div>
 
-<!-- Sly Bio -->
+<!-- Sly Bio, center colum -->
+<div class="column">
+    <div class="card">
         <img src="smaller.jpeg" alt="Headshot of Sly" class="rounded-image">
+        <div class="text-container">
+            <h2>Sly Yushchyshyn</h2>
+            <p>Sly Yushchyshyn is a Master in Public Policy student at HKS, studying political and economic development. Sly previously worked as a data analyst in the private and public sector.</p>
+        </div>
+    </div>
+</div>
 
-        <h2>Sly Yushchyshyn</h2>
-        <p>Sly Yushchyshyn is a Master in Public Policy student at HKS, studying political and economic development. Sly previously worked as a data analyst in the private and public sector.</p>
 
-<!-- Alina Bio -->
+<!-- Alina Bio, right column -->
+<div class="column">
+    <div class="card">
         <img src="image-alina.png" alt="Headshot of Alina" class="rounded-image">
+            <div class="text-container"
+                <h2>Alina Beskrovna</h2>      
+                <p>Alina Beskrovna is a first-year Master in Public Administration in International Development (MPA/ID) student at HKS. She also holds an M.Sc. in Applied Mathematics and an MBA in Finance. Alina has previously worked in financial analytics for supply chains and ran a startup development center under USAID.</p>
+            </div>
+        </div>
+    </div>
+</div>
 
-        <h2>Alina Beskrovna</h2>      
-        <p>Alina Beskrovna is a first-year Master in Public Administration in International Development (MPA/ID) student at HKS. She also holds an M.Sc. in Applied Mathematics and an MBA in Finance. Alina has previously worked in financial analytics for supply chains and ran a startup development center under USAID.</p>
     </body>
 </html>
