centered the images within each column

--- a/our-team/index.html
+++ b/our-team/index.html
@@ -10,17 +10,7 @@
     <body>
         <a href="../index.html", class="button-link-inactive">Home</a>
         <a href="index.html", class="button-link-active">Our Team</a>
-        <h1>About Us</h1>
-
-        <style>
-        /* Add a class to the image and apply border-radius */
-        .rounded-image {
-            border-radius: 50%; /* Set to 50% for a circular shape */
-            width: 200px; /* Set the desired width */
-            height: 200px; /* Set the desired height */
-            object-fit: cover; /* Maintain aspect ratio and cover the container */
-        }
-    </style>    
+        <h1>About Us</h1>  
 
 <!-- Container for the images and bios -->
 <div class="container">
@@ -52,8 +42,8 @@
 <div class="column">
     <div class="card">
         <img src="image-alina.png" alt="Headshot of Alina" class="rounded-image">
-            <div class="text-container"
-                <h2>Alina Beskrovna</h2>      
+            <div class="text-container">
+                <h2>Alina Beskrovna</h2>
                 <p>Alina Beskrovna is a first-year Master in Public Administration in International Development (MPA/ID) student at HKS. She also holds an M.Sc. in Applied Mathematics and an MBA in Finance. Alina has previously worked in financial analytics for supply chains and ran a startup development center under USAID.</p>
             </div>
         </div>
