added Linkedin button to Sly's bio

--- a/our-team/index.html
+++ b/our-team/index.html
@@ -33,6 +33,7 @@
         <div class="text-container">
             <h2>Sly Yushchyshyn</h2>
             <p>Sly Yushchyshyn is a Master in Public Policy student at HKS, studying political and economic development. Sly previously worked as a data analyst in the private and public sector.</p>
+            <a href=https://www.linkedin.com/in/syushchyshyn/ target="_black" class="linkedin-button">LinkedIn</a>
         </div>
     </div>
 </div>
